tests/baselines/reference/thisBinding.errors.txt
==== tests/cases/compiler/thisBinding.ts (1 errors) ====
    module M {
        export interface I {
        z;
        }
    
        export class C {
        public x=0;
        f(x:I) {
            x.e;  // e not found
           ~
!!! thisBinding.ts(9,8): error TS2094: The property 'e' does not exist on value of type 'I'.
            x.z;  // ok 
        }
        constructor() {
        ({z:10,f:this.f}).f(<I>({}));
        }
        }
    }
    
    class C {
        f(x: number) {
        }
    }